--- a/conf/app.ini
+++ b/conf/app.ini
@@ -4,6 +4,12 @@ RUN_MODE = debug
 [app]
 PAGE_SIZE = 10
 JWT_SECRET = 23347$040412
+RuntimeRootPath = runtime/
+LogSavePath = logs/
+LogSaveName = log
+LogFileExt = log
+TimeFormat = 20060102
+
 
 [server]
 HTTP_PORT = 8000
@@ -18,3 +24,4 @@ PASSWORD = root
 HOST = 127.0.0.1:3306
 NAME = todo
 TABLE_PREFIX = todo_
+
