添加用户认证

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -9,10 +9,12 @@ LogSavePath = logs/
 LogSaveName = log
 LogFileExt = log
 TimeFormat = 20060102
+GITHUB_CLIENT_KEY= 63c70afdd4cfd79d0783
+GITHUB_SECRET_KEY= 5ec0597aa6034bc4c14efe5bbfaf20693b526ada
 
 
 [server]
-HTTP_PORT = 8000
+HTTP_PORT = 8888
 READ_TIMEOUT = 60
 WRITE_TIMEOUT = 60
 
@@ -20,8 +22,8 @@ WRITE_TIMEOUT = 60
 TYPE = mysql
 USER = root
 PASSWORD = root
-
 HOST = 127.0.0.1:3306
 NAME = todo
 TABLE_PREFIX = todo_
+
 
